--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>YNWU IS ONLINE</h1>
-<h1>this is the main for .io</h1>
-<p>note# IKI website in construction...</p>
+<h1>YNWU1000</h1>
+<p>nothing to see here...</p>
 </body>
 </html>
